--- a/python/map.jinja
+++ b/python/map.jinja
@@ -18,9 +18,9 @@
     {
         'pkg': 'python2_x64',
         'python_path': 'C:\\Python27',
-        'pip_cwd': 'C:\\Python27\\scripts',
-        'pip_bin_env': 'C:\\Python27\\scripts\\pip.exe',
-        'venv_bin': 'C:\\Python27\\scripts\\virtualenv',
+        'pip_cwd': 'C:\\Python27\\Scripts',
+        'pip_bin_env': 'C:\\Python27\\Scripts\\pip.exe',
+        'venv_bin': 'C:\\Python27\\Scripts\\virtualenv',
         'version': '2.7.12150',
     },
 }, merge=salt['pillar.get']('python2:lookup'), base='default') %}
