--- a/python/map.jinja
+++ b/python/map.jinja
@@ -2,16 +2,15 @@
     'default': {
         'pkg': 'python',
         'pip_pkg': 'python-pip',
+        'mako_pkg': 'python-mako',
         'version': '',
     },
     'Debian': {
         'dev_pkg': 'python-dev',
-        'mako_pkg': 'python-mako',
         'm2c_pkg': 'python-m2crypto',
     },
     'RedHat': {
         'dev_pkg': 'python-devel',
-        'mako_pkg': 'python-mako',
         'm2c_pkg': 'python-m2ext',
     },
     'Windows':
@@ -21,7 +20,6 @@
         'pip_cwd': 'C:\\Python27\\Scripts',
         'pip_bin_env': 'C:\\Python27\\Scripts\\pip.exe',
         'venv_bin': 'C:\\Python27\\Scripts\\virtualenv',
-        'version': '2.7.12150',
     },
 }, merge=salt['pillar.get']('python2:lookup'), base='default') %}
 
@@ -29,13 +27,20 @@
     'default': {
         'pkg': 'python3',
         'pip_pkg': 'python3-pip',
+        'mako_pkg': 'python3-mako',
     },
     'Debian': {
         'dev_pkg': 'python3-dev',
-        'mako_pkg': 'python3-mako',
     },
     'RedHat': {
         'dev_pkg': 'python3-devel',
-        'mako_pkg': 'python3-mako',
+    },
+    'Windows':
+    {
+        'pkg': 'python3_x64',
+        'python_path': 'C:\\Python35',
+        'pip_cwd': 'C:\\Python35\\Scripts',
+        'pip_bin_env': 'C:\\Python35\\Scripts\\pip.exe',
+        'venv_bin': 'C:\\Python35\\Scripts\\virtualenv',
     },
 }, merge=salt['pillar.get']('python3:lookup'), base='default') %}
