use symlink to make python available on windows

--- a/python/map.jinja
+++ b/python/map.jinja
@@ -16,6 +16,7 @@
     'Windows':
     {
         'pkg': 'python2_x64',
+        'version': '2.7.12150',
         'python_path': 'C:\\Python27',
         'pip_cwd': 'C:\\Python27\\Scripts',
         'pip_bin_env': 'C:\\Python27\\Scripts\\pip.exe',
